<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_about"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:background="@color/gainsboro"
    tools:context="me.weyo.magicmirror.android.AboutActivity">

    <LinearLayout
        android:id="@+id/about_topbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="0dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >
    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_topbar"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/icon"
            android:contentDescription="@string/logo" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/about_app_name"
            android:textSize="18sp"
            android:textColor="@color/black" />

        <View
            android:id="@+id/about_line"
            android:layout_width="fill_parent"
            android:layout_marginTop="10dp"
            android:layout_height="1dp"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:background="#aa000000" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/about_info"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/about_logo"
        android:layout_marginTop="15dp"
        android:gravity="center_horizontal"
        android:orientation="vertical" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/app_intro"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:textColor="@color/black"
            android:gravity="center"
            android:text="@string/app_info"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="15dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textSize="16sp"
            android:text="@string/app_project_addr"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:gravity="center"
            android:textColor="@color/black"
            android:textColorLink="@color/black"
            android:autoLink="all"
            android:text="@string/project_info"/>

        <!--TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/black"
            android:text="@string/setting_items_info"/-->
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="10dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:gravity="center"
        android:orientation="vertical"
        android:baselineAligned="false">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="5dp"
            android:gravity="center"
            android:textColor="@color/transparent_background"
            android:text="@string/copyright"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:textColor="@color/transparent_background"
            android:text="@string/tech_support"/>
    </LinearLayout>

</RelativeLayout>
