<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="me.weyo.magicmirror.android.MainActivity">
    <LinearLayout
        android:id="@+id/topbar"
        android:layout_width="match_parent"
        android:layout_height="20dp"
        android:layout_marginBottom="1dp"
        android:layout_marginTop="1dp"
        android:orientation="horizontal" >

    </LinearLayout>
    <LinearLayout
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/topbar"
        android:layout_marginBottom="0dp"
        android:layout_marginTop="1dp"
        android:gravity="center_horizontal"
        android:orientation="horizontal" >

        <ImageView android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@drawable/logo"
            android:contentDescription="@string/logo" />
    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="20dp"
        android:layout_marginTop="10dp"
        android:layout_alignParentBottom="true"
        android:weightSum="3"
        android:gravity="center"
        android:orientation="horizontal"
        android:baselineAligned="false">
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:layout_gravity="center_horizontal">
            <ImageButton
                android:id="@+id/setting"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/main_setting_btn_np"
                android:contentDescription="@string/setting" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:layout_weight="1">
            <ImageButton
                android:id="@+id/saying"
                android:layout_width="70dp"
                android:layout_height="70dp"
                android:layout_gravity="center"
                android:background="@drawable/main_saying_btn_np"
                android:contentDescription="@string/speaker" />
        </LinearLayout>
        <LinearLayout
            android:layout_width="0dp"
            android:layout_height="fill_parent"
            android:layout_weight="1"
            android:gravity="center">
            <ImageButton
                android:id="@+id/help"
                android:layout_width="35dp"
                android:layout_height="35dp"
                android:layout_gravity="center"
                android:background="@drawable/main_help_btn_np"
                android:contentDescription="@string/help" />
        </LinearLayout>
    </LinearLayout>
</RelativeLayout>
